hard-gists/05bec6966701f720c3aa/run.log
=== Docker Run Log for 05bec6966701f720c3aa ===
Started at: Mi 29. Okt 11:28:36 CET 2025

[2025-10-29 11:28:36] START: Running container for 05bec6966701f720c3aa
[2025-10-29 11:28:36] SUCCESS: Container a6c8678afae0b75589b8b1bc157ca84cd36584dc955f09f5992f08202b70a6a1 started for 05bec6966701f720c3aa
=== Container logs for 05bec6966701f720c3aa ===
  File "/snippet.py", line 69
    print 'Could not find a valid profile for this user.'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 05bec6966701f720c3aa ===
[2025-10-29 11:28:38] INFO: Container a6c8678afae0b75589b8b1bc157ca84cd36584dc955f09f5992f08202b70a6a1 has stopped
